# 3DStris

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.adoc  README.md  azure-pipelines.yml  crowdin.yml
.azure/: install-bannertool.sh  install-devkitarm.sh  install-makerom.sh
.travis/: install-bannertool.sh  install-devkitpro.sh
apps/: 3dstris.cpp  CMakeLists.txt
cmake/: FindRapidJSON.cmake  Findpcg.cmake  Findphmap.cmake  Findsajson.cmake
data/cia/: 3dstris.rsf.in  sound.cwav
data/gfx/: images.t3s  sprites.t3s
data/romfs/lang/: af_ZA.json  am_ET.json  be_BY.json  bg.json  bg_BG.json  ca_ES.json  da.json  da_DK.json  de.json  de_DE.json  el_GR.json  en.json  en_US.json  eo_XX.json  es_ES.json  es_MX.json  fil.json  fr.json  fr_FR.json  hi_IN.json  hr.json  hu_HU.json  id.json  id_ID.json  it_IT.json  ja_JP.json  ko_KR.json  mk.json  mk_MK.json  nb_NO.json  nl_NL.json  pl_PL.json  pt_BR.json  pt_PT.json  ru_RU.json  sv_SE.json  te_IN.json  uk_UA.json  vi_VN.json  zh_Hans.json  (+1 more)
include/3dstris/: board.hpp  colors.hpp  config.hpp  game.hpp  games.hpp  gui.hpp  mainmenu.hpp  piece.hpp  shapes.hpp  state.hpp  util.hpp  version.hpp  version.hpp.in  wallkicks.hpp
include/3dstris/config/: games.hpp  keybinds.hpp  l10n.hpp
include/3dstris/game/: board.hpp  piece.hpp  shapes.hpp  wallkicks.hpp
include/3dstris/gui/: button.hpp  doubleinputfield.hpp  floatinputfield.hpp  integerinputfield.hpp  keybindbutton.hpp  languagebutton.hpp  panel.hpp  slider.hpp  theme.hpp  togglebutton.hpp  u32inputfield.hpp  widget.hpp
include/3dstris/gui/widgets/: button.hpp  integerinputfield.hpp  keybindbutton.hpp  languagebutton.hpp  panel.hpp  togglebutton.hpp
include/3dstris/gui/widgets/special/: keybindbutton.hpp  languagebutton.hpp
include/3dstris/states/: configfailed.hpp  configscreen.hpp  ingame.hpp  languages.hpp  loadfailed.hpp  mainmenu.hpp  modeselect.hpp  paused.hpp  playing.hpp  results.hpp  sprint.hpp  sprintresults.hpp  sprinttimes.hpp
include/3dstris/states/game/: ingame.hpp  paused.hpp  playing.hpp  results.hpp  sprint.hpp  sprintresults.hpp
include/3dstris/states/menu/: configscreen.hpp  keybindselect.hpp  languageselect.hpp  loadfailed.hpp  mainmenu.hpp  modeselect.hpp  sprintselect.hpp  sprinttimes.hpp
include/3dstris/states/menu/settings/: base.hpp  gameplay.hpp  visual.hpp
include/3dstris/states/menu/settings/gameplay/: keybindselect.hpp
include/3dstris/util/: colorstextures.hpp  draw.hpp  fs.hpp  hash.hpp  l10n.hpp  log.hpp  math.hpp  pointer.hpp  string.hpp  stringview.hpp  text.hpp
resources/: 3dstris.rsf  3dstris.rsf.in  banner.cgfx
resources/gfx/: images.t3s  sprites.t3s
romfs/lang/: bg.json  de.json  en.json  fr.json  jp.json  mk.json  pl.json  pt.json  ru.json
source/: board.cpp  board.hpp  main.cpp  piece.cpp  piece.hpp  shapes.hpp  util.hpp
src/: 3dstris.cpp  CMakeLists.txt  board.cpp  colors.cpp  config.cpp  game.cpp  games.cpp  gui.cpp  ingame.cpp  mainmenu.cpp  piece.cpp  state.cpp
src/config/: games.cpp  keybinds.cpp  l10n.cpp
src/game/: board.cpp  piece.cpp
src/gui/: button.cpp  doubleinputfield.cpp  floatinputfield.cpp  keybindbutton.cpp  languagebutton.cpp  panel.cpp  slider.cpp  theme.cpp  togglebutton.cpp  u32inputfield.cpp  widget.cpp
src/gui/widgets/: button.cpp  keybindbutton.cpp  languagebutton.cpp  panel.cpp  togglebutton.cpp
src/gui/widgets/special/: keybindbutton.cpp  languagebutton.cpp
src/states/: configfailed.cpp  configscreen.cpp  ingame.cpp  languages.cpp  loadfailed.cpp  mainmenu.cpp  modeselect.cpp  paused.cpp  playing.cpp  results.cpp  sprint.cpp  sprintresults.cpp  sprinttimes.cpp
src/states/game/: ingame.cpp  paused.cpp  playing.cpp  results.cpp  sprint.cpp  sprintresults.cpp
src/states/menu/: configscreen.cpp  keybindselect.cpp  languageselect.cpp  loadfailed.cpp  mainmenu.cpp  modeselect.cpp  sprintselect.cpp  sprinttimes.cpp
src/states/menu/settings/: base.cpp  gameplay.cpp  visual.cpp
src/states/menu/settings/gameplay/: keybindselect.cpp
src/util/: colorstextures.cpp  hash.cpp  l10n.cpp  log.cpp  string.cpp  stringview.cpp  text.cpp
